--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: #FFF0FA;
+    background: #000000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
